--- a/site_coworking.html
+++ b/site_coworking.html
@@ -192,7 +192,6 @@
                         <img class="svgCall" src="team.svg" /></div>
                         <div>Один час аренды переговорной бесплатно </div>
 
-
                     </div>
                     <div class="col-md-4" >
                         <div>
@@ -240,9 +239,82 @@
 
             <h4>т. +7 123 456-78-90  |  INFO@MYSITE.RU</h4>
         </div>
+        <div id="registerDiv">
+            <form style="font-size: 20px">
+                <label >Подпишитесь на новости:</label>
+                <br>
+
+                <input style='width: 300px; opacity: 0.5' type="text" placeholder="Ваша эл. почта">
+                <br>
+                <button id="btn_register" class="btn-outline-success btn-success" value="">Подписаться</button>
+            </form>
+        </div>
     </div>
 
 </div>
+
+<div id="map" class="container-fluid">
+
+</div>
+
+<footer class="page-footer bg-dark ">
+
+    <div class="container-fluid">
+        <div class="row ">
+            <div class="col-md-6 text-center">
+                <label style="color: white; top: 45%">© 2023 Вместе. Сайт создан на Wix.com</label>
+            </div>
+
+            <div class="col-md-6 form-inline ">
+                <div>
+                    <a href="#"><img class="iconsMedia"  src="facebook%20(1).svg"></a>
+                </div>
+                <div>
+                    <a href="#"> <img class="iconsMedia"  src="twitter%20(1).svg"></a>
+                </div>
+                <div>
+                    <a href="#"> <img class="iconsMedia"  src="linkedin%20(1).svg"></a>
+                </div>
+
+                <div>
+                    <a href="#"><img class="iconsMedia" src="vk.svg"></a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+
+</footer>
+<!--<footer class="card-footer">
+    <div class="container-fluid">
+        <div class="row ">
+            <div class="col-md-6">
+                <label>© 2023 Вместе. Сайт создан на Wix.com</label>
+            </div>
+
+            <div class="col-md-6 form-inline">
+                <div>
+                    <img class="iconsMedia"  src="facebook.svg">
+                </div>
+                <div>
+                    <img class="iconsMedia"  src="whatsapp.svg">
+                </div>
+                <div>
+                    <img class="iconsMedia"  src="linkedin.svg">
+                </div>
+                <div>
+                    <img class="iconsMedia"  src="instagram.svg">
+                </div>
+                <div>
+                    <img class="iconsMedia" src="skype.svg">
+                </div>
+            </div>
+
+        </div>
+    </div>
+</footer>-->
 
 <!--<div class="container-fluid">
     <img src="https://www.stem.org.uk/sites/default/files/blog-images/Hunt%20for%20perfect%20numbers.jpg">
