--- a/site_coworking.html
+++ b/site_coworking.html
@@ -237,7 +237,7 @@
 
             <h4>АДРЕС: УЛ. АРБАТ, 1А, МОСКВА, РОССИЯ</h4>
 
-            <h4>т. 093 822 811 4  |  INFO@MYSITE.RU</h4>
+            <h4>т. 093 822 811 4  |  Sobaka@gmail.cpm</h4>
         </div>
         <div id="registerDiv">
             <form style="font-size: 20px">
